Modify some changes to our Home Page

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
                     <div class="home__infos">
                        <div>
                           <h2 class="home__name">
-                           Dr. Avenso Hold Jackson
+                           Mr.  Avenso Hodo Jackson
                           </h2>
-                          <h2 class="home__profession">Program expert</h2>
+                          <h2 class="home__profession">Program Expert</h2>
                           <div class="home__icon">
                            <div class="home__box">
                               <i class="ri-registered-line"></i>
@@ -123,7 +123,7 @@
                     </div>
 
                     <div class="home__image">
-                      <img src="/resources/Img/home-img.png" alt="image" class="home__img">
+                      <img src="/resources/Img/home-image-1.png" alt="image" class="home__img">
                     </div>
                </div>
             </div>
