--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
             <div class="nav__buttons">
                <!-- Theme Button -->
-                <i class="ri-moon-fill nav__theme" id="dark-theme"></i>
+                <i class="ri-moon-fill nav__theme" id="theme-button"></i>
 
                 <!-- Toggle button -->
                  <div class="nav__toggle" id='nav-toggle'>
