Modify some changes

--- a/index.html
+++ b/index.html
@@ -350,6 +350,21 @@
                 <div class="gallery__image">
                   <img src="/resources/Img/gallery-img-12.png" alt="image" class="gallery__img">
                 </div>
+                <div class="gallery__image">
+                  <img src="/resources/Img/gallery-img-9.png" alt="image" class="gallery__img">
+                </div>
+
+                <div class="gallery__image">
+                  <img src="/resources/Img/gallery-img-10.png" alt="image" class="gallery__img">
+                </div>
+
+                <div class="gallery__image">
+                  <img src="/resources/Img/gallery-img-11.png" alt="image" class="gallery__img">
+                </div>
+
+                <div class="gallery__image">
+                  <img src="/resources/Img/gallery-img-12.png" alt="image" class="gallery__img">
+                </div>
             </div>
          </section>
 
