Modify some changes

--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
                   <div class="delivery__image">
                      <img src="/resources/Img/logo3.png" alt="image" class="delivery__img">
                   </div>
-                  <a href="#contact" class="button-dark" >
-                     Request 
+                  <a href="#contact" download="" class="button-dark" >
+                     Brochure 
                      <i class="ri-arrow-drop-right-fill"></i>
                   </a>
                </div>
