Modify some chaanges

--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                            <i class="ri-messenger-fill"></i>
                         </a>
 
-                        <a href="" target="_blank" class="contact__social-link">
+                        <a href="https://WA.me/231770030704" target="" class="contact__social-link">
                           <i class="ri-whatsapp-fill"></i>
                         </a>
 
@@ -400,9 +400,10 @@
                          <i class="ri-telegram-2-fill"></i>  
                         </a>
 
-                        <a href="" target="_blank" class="contact__social-link">
-                          <i class="ri-mail-fill"></i>
+                        <a href="mailto:jtonyyayoo57@gmial.com" class="contact__social-link" title="Email me">
+                         <i class="ri-mail-fill"></i>
                         </a>
+                        
                      </div>
                   </div>
 
