Modify some changes

--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                          <i class="ri-telegram-2-fill"></i>  
                         </a>
 
-                        <a href="mailto:jtonyyayoo57@gmial.com" class="contact__social-link" title="Email me">
+                        <a href="mailto:jtonyyayoo57@gmial.com" target="_blank" class="contact__social-link" title="Email me">
                          <i class="ri-mail-fill"></i>
                         </a>
                         
