Modify some changes

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <div class="home__infos">
                        <div>
                           <h2 class="home__name">
-                           Mr.  Avenso Hodo Jackson
+                           Mr.  Avenso Holo Jackson
                           </h2>
                           <h2 class="home__profession">Program Expert</h2>
                           <div class="home__icon">
